Todo : fix z-index

--- a/src/ScrollButton.css
+++ b/src/ScrollButton.css
@@ -10,7 +10,6 @@
 
 .scrollButtonH {
   opacity: 0.5;
-  z-index: 1000;
 }
 
 .scrollButtonH:hover {
